# taxonomise

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
examples/: astrophysics_corpus.csv  astrophysics_results.csv  astrophysics_taxonomy.json
src/taxonomise/: __init__.py  __main__.py  cli.py  confidence.py  config.py  data.py  embeddings.py  io.py  keywords.py  logging.py  matching.py  pipeline.py  similarity.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_corpus.csv  sample_corpus.jsonl  sample_taxonomy.csv  sample_taxonomy.json
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_confidence.py  test_data.py  test_similarity.py
